--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="Area">Area Of Land</string>
     <string name="user_info">User Info</string>
     <string name="field_adder">Add New Field</string>
-    <string name="DTH">Days To Harvest</string>
+    <string name="DTH">Days To Harvest:</string>
     <string name="best_crop">Select Best Crop</string>
     <string name="currentsituaation">Current Progress</string>
     <string name="procedure">Crop Suggestion</string>
