some layout addition

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,9 @@
     <string name="button_info_field">Add New Field</string>
     <string name="button_info_UI">User Info</string>
     <string name="fieldname">Field Name</string>
-    <string name="userfieldname"></string>
+<string name="Rainques">Click if NO Irrigation is Available</string>
     <string name="save">SAVE</string>
+    <string name="userfieldname"></string>
     <string name="title_activity_add_new_field">AddNewField</string>
     <string name="region">Region</string>
     <string name="NOF">No Of Fields</string>
@@ -21,7 +22,26 @@
     <string name="currentsituaation">Current Progress</string>
     <string name="procedure">Crop Suggestion</string>
     <string name="cropgrown">Crop Grown :</string>
+    <string name="info">Please Enter The Following Information/ Sync with Device</string>
+    <string name="AVGT">Average Temperature:</string>
+    <string name="AVGS">Total Hours of Sunshine:</string>
+    <string name="AVGR">Average Rainfall in mm:</string>
+    <string name="AVGPH">PH of Soil:</string>
+    <string name="AVGHU">Humidity in Percentage:</string>
+    <string name="AVGNI">Nitrogen Content in mm/kg:</string>
+    <string name="sync">SYNC</string>
+    <string name="chose">Chose Best Crop</string>
+    <string name="Croppriority">Set Priority Crop</string>
+
+    <string name="HintPH">PH</string>
+    <string name="HintSunshine">Sunshine</string>
+    <string name="HintRain">Rainfall</string>
+    <string name="HintTemp">Temperature</string>
+    <string name="HintHumidity">Humidity</string>
+    <string name="Hintnitro">Nitrogen</string>
+
     <string-array name="zones">
+
         <item>Mechi</item>
         <item>Koshi</item>
         <item>Sagarmatha</item>
@@ -45,4 +65,21 @@
         <item>Aana</item>
         <item>Insignificant</item>
     </string-array>
+
+
+    <string-array name="Crop_names">
+        <item>None</item>
+    <item>Corn</item>
+    <item>Lima Beans</item>
+    <item>Onions</item>
+    <item>Pea</item>
+    <item>Potatoes</item>
+    <item>Pumpkin</item>
+    <item>Rice</item>
+    <item>SoyBean</item>
+    <item>Strawberry</item>
+    <item>Wheat</item>
+    </string-array>
+
+
 </resources>
